--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@
     display: inline;
     border: 1px solid black;
  }
+#restart1 {
+   position: relative;
+   left: 51%;
+   transform: translate(-50%, 0);
+}
