--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
 
-
 #canvas-container {
     width: 100%;
     text-align:center;
  }
  canvas {
+   margin-bottom: 10px;
     display: inline;
     border: 1px solid black;
     background: url(Fon.gif);
  }
-#restart1 {
+#restart {
    position: absolute;
-   left: 51%;
+   left: 50%;
    transform: translate(-50%, 0);
+}
+.button-33 {
+  background-color: #f7e411;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-33:hover {
+  box-shadow: rgb(255, 0, 0) 0 -25px 18px -14px inset,rgba(238, 255, 50, 0.25) 0 1px 2px,rgba(255, 225, 0, 0.25) 0 2px 4px,rgba(136, 208, 255, 0.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(237, 146, 255, 0.983) 0 16px 32px;
 }
