--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-bottom: 20px;
 }
 
 .button-33:hover {
